# keepassxc-yubikey-unlocker

./: LICENSE  README.md  pyproject.toml
src/kyu/: bip39.py  bytewords.py  cli.py  config.py  crypto.py  hardware.py  keepassxc.py  types.py
tests/: test_bip39.py
